# wake_up_word_detect

./: .gitignore  README.md  best_model2.pth  dataprepare.py  model.py  model2.py  model3.py  predict.py  pyproject.toml  wake_word_model_documentation.md
